
##############################################################

bin_PROGRAMS = simulator

simulator_CPPFLAGS = -IObjectville \
										 -ISimulator

simulator_SOURCES = Simulator/Simulator.cpp

simulator_LDFLAGS = 

simulator_LDADD = 

##############################################################

