
##############################################################

bin_PROGRAMS = simulator

simulator_CPPFLAGS = -g -IObjectville \
										 -ISimulator

simulator_SOURCES = Simulator/Simulator.cpp

simulator_LDFLAGS = 

simulator_LDADD = 

##############################################################

